# kernels

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
scripts/: vendor-triton.sh
src/kernels/benchmarks/: fused_softmax.py  vector_addition.py
src/kernels/ops/: fused_softmax.py  vector_addition.py
