[project]
name = "kernels"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["torch"]

[project.optional-dependencies]
# triton has no macOS wheels; the marker keeps `uv sync` working on the Mac
gpu = ["triton; sys_platform == 'linux'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kernels"]
