[project]
name = "kernels"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["matplotlib>=3.11.0", "numpy>=2.5.0", "pandas>=3.0.3", "torch"]

[project.optional-dependencies]
# triton has no macOS wheels; the marker keeps `uv sync` working on the Mac
gpu = ["triton; sys_platform == 'linux'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kernels"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E731: allow assigning lambdas to variables
ignore = ["E731"]

[dependency-groups]
dev = ["black>=26.5.1"]
